Update `meta` tags in index
Signed-off-by: Avishrant Sharma <avishrants@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/logo256.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Electrothon 4.0 WebSite" />
+    <meta name="description" content="Official Website of Electrothon 4.0" />
+    <meta id="og-title" property="og:title" content="Electrothon 4.0" />
+    <meta
+      id="og-description"
+      property="og:description"
+      content="Official website of Electrothon 4.0"
+    />
+    <meta
+      id="og-image"
+      property="og:image"
+      content="%PUBLIC_URL%/logo256.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
