--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/electro.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Official Website of Electrothon 4.0" />
-    <meta id="og-title" property="og:title" content="Electrothon 4.0" />
-    <meta
-      id="og-description"
-      property="og:description"
-      content="Official website of Electrothon 4.0"
-    />
-    <meta
-      id="og-image"
-      property="og:image"
-      content="%PUBLIC_URL%/logo256.png"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
 
-    <!--
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Cache-control" content="public">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Official Website of Electrothon 4.0" />
+  <meta name="keywords" content="Electrothon, Electrothon 4.0, SPEC, NITH, Hackathon, Electrothon 2022">
+  <meta name="author" content="Team SPEC">
+  <meta id="og-title" property="og:title" content="Electrothon 4.0" />
+  <meta id="og-description" property="og:description" content="Official website of Electrothon 4.0" />
+  <meta id="og-image" property="og:image" content="%PUBLIC_URL%/logo256.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Electrothon 4.0">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="icon" href="%PUBLIC_URL%/electro.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -33,20 +32,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Electrothon 4.0</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
-    <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"
-    integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Electrothon 4.0</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -56,7 +48,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
-  </body>
-  
+
+</body>
+
 </html>
