Sponsor ection patched

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="icon" href="%PUBLIC_URL%/electro.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
