Code splitting and suspense, improve accessibility
Signed-off-by: Avishrant Sharma <avishrants@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Electrothon 4.0">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta http-equiv="last-modified" content="Sun, 10 Feb 2013 14:00:46 GMT " />
+  <meta http-equiv="cache-control" content="Private" />
+  <meta http-equiv="Expires" content="3600" />
   <link rel="icon" href="%PUBLIC_URL%/electro.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" media="print" onload="this.media='all'">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y627M22EZY"></script>
   <script>
