--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-control" content="public" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Official Website of Electrothon 5.0" />
+    <meta
+      name="keywords"
+      content="Electrothon, Electrothon 5.0, SPEC, NITH, Hackathon, Electrothon 2022"
+    />
+    <meta name="author" content="Team SPEC" />
+    <meta id="og-title" property="og:title" content="Electrothon 5.0" />
+    <meta
+      id="og-description"
+      property="og:description"
+      content="Official website of Electrothon 5.0"
+    />
+    <meta
+      id="og-image"
+      property="og:image"
+      content="%PUBLIC_URL%/logo256.png"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Electrothon 5.0" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta http-equiv="last-modified" content="Sun, 10 Feb 2013 14:00:46 GMT " />
+    <meta http-equiv="cache-control" content="Private" />
+    <meta http-equiv="Expires" content="3600" />
+    <link rel="icon" href="%PUBLIC_URL%/electro.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Gugi:wght@400"
+    />
+    <link
+      rel="stylesheet"
+      href="https://api.fontshare.com/css?f[]=gugi@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Alice:wght@400"
+    />
+    <link
+      rel="stylesheet"
+      href="https://api.fontshare.com/css?f[]=alice@400&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Y627M22EZY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-Y627M22EZY");
+    </script>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Cache-control" content="public">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Official Website of Electrothon 5.0" />
-  <meta name="keywords" content="Electrothon, Electrothon 5.0, SPEC, NITH, Hackathon, Electrothon 2022">
-  <meta name="author" content="Team SPEC">
-  <meta id="og-title" property="og:title" content="Electrothon 5.0" />
-  <meta id="og-description" property="og:description" content="Official website of Electrothon 5.0" />
-  <meta id="og-image" property="og:image" content="%PUBLIC_URL%/logo256.png" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Electrothon 5.0">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta http-equiv="last-modified" content="Sun, 10 Feb 2013 14:00:46 GMT " />
-  <meta http-equiv="cache-control" content="Private" />
-  <meta http-equiv="Expires" content="3600" />
-  <link rel="icon" href="%PUBLIC_URL%/electro.png" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo256.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" media="print" onload="this.media='all'">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y627M22EZY"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-Y627M22EZY');
-  </script>
-
-  <!--
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -48,13 +86,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Electrothon 5.0</title>
-</head>
+    <title>Electrothon 5.0</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -64,7 +102,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-</body>
-
+  </body>
 </html>
